# onote-rust-server

./: Cargo.toml  README.md
src/: main.rs
src/handlers/: handlers.rs
src/model/: folder.rs  mod.rs  note.rs  user.rs
