[package]
name = "onote-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
futures = "0.3.29"
hyper = { version = "0.14.27", features = ["full"] }
serde = {version="1.0.192", features = ["derive"]  } 
tokio = {version="1.34.0", features = ["full"] }
tower = "0.4.13"

[dependencies.mongodb]
version = "2.7.1"
features = ["tokio-runtime"]
